<resources>
    <string name="app_name">Keyforge Management</string>
    <string name="aember">Æmber</string>
    <string name="sas_score">SAS</string>
    <string name="search">Search</string>
    <string name="main_title">My Decks</string>
    <string name="wins">Wins</string>
    <string name="losses">Losses</string>
    <string name="sort_by">Sort by</string>
    <string name="creature_count">Creature</string>
    <string name="action_count">Action</string>
    <string name="artifact_count">Artifact</string>
    <string name="add_decks">Add decks</string>
    <string name="upgrade_count">Upgrade</string>
    <string name="total_power">Total Power</string>
    <string name="total_armor">Total Armor</string>
    <string name="sas">SAS</string>
    <string name="information">Info</string>
    <string name="global_house_rankings">Global house rankings</string>
    <string name="Information">All the Keyforge information (Deck, Houses, Cards) are copyrighted by Fantasy Flight Games\n\n The SAS score is a copyrighted property of Decks of Keyforge website .For more information about it visit <a href="www.decksofkeyforge.com">www.decksofkeyforge.com</a>; \n  It represent the how much \'strong\' is your deck based on a scale from 0 to 100 and it is subjected to change at any time</string>
    <string name="most_win_deck">Most Wins Deck</string>
    <string name="most_win_rate_deck">Most win rate deck</string>
    <string name="crashLytics">We use Crashlytics — a service offered by Fabric — a company owned by Google Inc. 1600 Amphitheatre Parkway, Mountain View, CA 94043, USA.\nCrashlytics provides us information about crashes and malfunctions in Applications.\nTo Crashlytics, in case of malfunction or failure, the following information is transmitted:\n・IP-address of the device;\n・information about the device, such as: device ID, model and device type, name and version of the operating system, settings and language of the device;\n・version and functionality of the application;\n・time of failure.\nData transmitted to Crashlytics neither stored or transferred to other services or resources, nor associated with other data available to Google.\nFor more information on Crashlytics privacy settings, please access:\n<a href="https://docs.fabric.io/apple/fabric/data-privacy.html">https://docs.fabric.io/apple/fabric/data-privacy.html</a>;\n<a href="https://docs.fabric.io/android/fabric/data-privacy.html">https://docs.fabric.io/android/fabric/data-privacy.html</a>.\nGoogle privacy policy is available at:\n<a href="https://policies.google.com/privacy">https://policies.google.com/privacy</a>.\nGoogle is certified under the Privacy Shield and hereby guarantees compliance with European privacy laws:\n<a href="https://www.privacyshield.gov/participant?id=a2zt000000001L5AAI">https://www.privacyshield.gov/participant?id=a2zt000000001L5AAI</a></string>
    <string name="text">Text</string>
    <string name="type">Type</string>
    <string name="licenses">Open Source Licenses</string>
    <string name="lonely"><![CDATA[It feels a bit lonely here… try adding a deck with + button ->]]></string>
    <string name="importDok">Import from DOK</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="card_icon">Card Icon</string>
    <string name="app_logo">App logo</string>
    <string name="rarity">Rarity</string>
    <string name="special_card_attribute">Special card attribute</string>
    <string name="house_1">house 1</string>
    <string name="house_2">house 2</string>
    <string name="house_3">house 3</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="share">Share</string>
    <string name="charts">Charts</string>
    <string name="strongest_deck">Strongest deck</string>
    <string name="board">Board</string>
    <string name="speed">Speed</string>
    <string name="extras">Extras</string>
    <string name="amber_control">amber control</string>
    <string name="expected_amber">expected amber</string>
    <string name="creautre_protection">creature protection</string>
    <string name="artifact_control">artifact control</string>
    <string name="creature_control">creature control</string>
    <string name="efficiency">efficiency</string>
    <string name="key_cheat">key cheat</string>
    <string name="archive">archive</string>
    <string name="disruption">disruption</string>
    <string name="house_cheating">house cheating</string>
    <string name="effective_power">effective power</string>
    <string name="base_aerc">BASE AERC</string>
    <string name="synergy">SYNERGY</string>
    <string name="antisynergy">ANTISYNERGY</string>
    <string name="information_logo_button">Information logo button</string>
    <string name="counts">Counts</string>
    <string name="house_logo">house logo</string>
    <string name="refresh_cards">Refresh Cards</string>
    <string name="compare_to_dok">Compare to DOK</string>
    <string name="meta">META</string>
    <string name="sclaing_steal_amber">sclaing steal amber</string>
    <string name="recusion">recusion</string>
    <string name="board_wipes">board wipes</string>

</resources>
