<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_deck"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sort_decks"
        android:icon="@drawable/ic_add_a_photo_black_24dp"
        android:title="@string/sort_by"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/sort_by_amber"
                android:title="@string/aember"
                app:showAsAction="never" />
            <item
                android:id="@+id/sort_by_sas"
                android:title="@string/sas_score"
                app:showAsAction="never" />
            <item
                android:id="@+id/sort_by_creature_count"
                android:title="@string/creature_count"
                app:showAsAction="never" />
            <item
                android:id="@+id/sort_by_action_count"
                android:title="@string/action_count"
                app:showAsAction="never" />
            <item
                android:id="@+id/sort_by_artifact_count"
                android:title="@string/artifact_count"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/action_about_us"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/about_us"
        app:showAsAction="never" />


</menu>

