<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.charts.ChartActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/charts_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/mainButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="5sp"
                android:text="@string/global_house_rankings"
                android:textAllCaps="true"
                android:textAppearance="@style/textFontHigh" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/houses_chart"
                android:layout_width="match_parent"
                android:layout_height="280sp" />

            <TextView
                style="@style/mainButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="5sp"
                android:text="@string/most_win_deck"
                android:textAllCaps="true"
                android:textAppearance="@style/textFontHigh" />


            <include
                android:id="@+id/most_win_deck"
                layout="@layout/deck_displayer" />

            <TextView
                android:id="@+id/txtView_winrate"
                style="@style/mainButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="5sp"
                android:text="@string/most_win_rate_deck"
                android:textAllCaps="true"
                android:textAppearance="@style/textFontHigh" />

            <include
                android:id="@+id/most_win_rate_deck"
                layout="@layout/deck_displayer" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>